fix account info on mobile

--- a/src/scss/sections/visualisations.scss
+++ b/src/scss/sections/visualisations.scss
@@ -24,10 +24,15 @@
     display: flex;
     top: 30px;
     right: 10px;
+    z-index: 10;
 
     @media only screen and (max-width: $bp-medium) {
       top: unset;
-      bottom: 20px;
+      right: 0;
+      left: 0;
+      width: 100%;
+      justify-content: center;
+      bottom: 10px;
     }
   }
 
@@ -65,6 +70,7 @@
     @media only screen and (max-width: $bp-medium) {
       grid-template-columns: 1fr;
       grid-template-rows: repeat(4, 1fr);
+      margin-bottom: 40px;
     }
   }
 }
